--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React App</title>
+  <title>MTG Inventory</title>
 </head>
-<body>
-  <div id="root"></div> 
+<body style="margin: 0; padding: 0; height: 100vh; overflow: auto;"> 
+  <div style="height: 100%;" id="root"></div> 
 </body>
 </html>
